Do global include srt/sort

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.9)
 project(sort-root)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "-Wall -Werror -Wextra")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 set(SORT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/sort)
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
@@ -11,6 +11,7 @@ find_package(Threads REQUIRED)
 find_package(glog 0.3.5 REQUIRED)
 
 include_directories(include)
+include_directories(${SORT_INCLUDE_DIR})
 
 add_subdirectory(lib/catch)
 add_subdirectory(src/sort)
